--- a/views/templates/layout.njk
+++ b/views/templates/layout.njk
@@ -1,16 +1,21 @@
 <!doctype html>
   <html lang="en" dir="ltr">
     <!--
-    ##:::: ##: ####: ########::  ########::::  ###. ###:: ########::::
-    ##:::: ##:. ##:: ##.... ##:. ##.....::::: ##: ##: ##: ##.....:::::
-    ##:::: ##:: ##:: ##:::: ##:: ##:::::::::: ##: ##: ##: ##::::::::::
-    #########:: ##:: ########::: ######:::::: ##: ##: ##: ######::::::
-    ##.... ##:: ##:: ##.. ##:::: ##...::::::: ##: ##: ##: ##...:::::::
-    ##:::: ##:: ##:: ##::. ##::: ##:::::::::: ##: ##: ##: ##::::::::::
-    ##:::: ##: ####: ##:::. ##:  ########:::: ##::::: ##: ########::::
-    For Freelance or Open Source projects contact info@cathydutton.co.uk
-    http://www.cathydutton.co.uk
+
+    #########:: #########:: ##.... ##:::: ##.... ##:. ####::::
+    ##.....:::: ##.... ##:. ##.... ##:.:: ##.... ##:.  ##:::::
+    ##.....:::: ##:::: ##:: ##:::: ##:::: ##.... ##:.  ##:::::
+    #########:: #########:: #########:::: #########::  ##:::::
+    ::.... ##:: ##.... ##:: :::::: ##:::: ##.... ##::  ##:::::
+    :::::: ##:: ##.... ##:: :::::: ##:::: ##.... ##::  ##:::::
+    #########:: ##.... ##:: :::::: ##:::: ##.... ##:: ####::::
+
+    Email: info@cathydutton.co.uk
+    Twitter: cathy_dutton
+    website: cathydutton.co.uk
+    
     -->
+
     <head>
       <meta charset="UTF-8">
       <!-- Instruct Internet Explorer to use its latest rendering engine -->
