--- a/views/components/logo/logo.css
+++ b/views/components/logo/logo.css
@@ -8,11 +8,11 @@
     height: 180px;
     margin: 2em auto;
     color: var(--colour-bright);
-    /* border-radius: 50%;
-    border: solid 4px var(--colour-bright); */
+    border-radius: 50%;
+    border: solid 4px var(--colour-bright);
+    background: var(--colour-light);
     text-align: center;
     animation: fadeIn 2s forwards;
-    background: var(--colour-dark);
     text-align: center;
     position:relative
   }
