--- a/assets/css/5-layout.css
+++ b/assets/css/5-layout.css
@@ -26,14 +26,8 @@
   /* Header CSS grid */
   header {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 1em;
-  }
-
-  .accessibility-tools {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: .5em;
   }
   
   /* Resisable demo area */
@@ -41,6 +35,8 @@
     border: 1px solid var(--colour-dark);
     padding: 1em;
     margin-top: 1em;
+    overflow: scroll;
+    /* resize: both; */
   }
 
 
