--- a/views/components/a11y-buttons/a11y-buttons.css
+++ b/views/components/a11y-buttons/a11y-buttons.css
@@ -5,10 +5,14 @@
 .accessibility-tools fieldset {
   margin-bottom: 1em;
   padding: .4em;
+  min-width: 150px;
+  word-break: break-all;
 }
 
 .accessibility-tools legend {
   padding: .4em;
+  hyphens: auto;
+  word-break: break-all;
 }
 
 .button--ally {
