--- a/views/components/skip-navigation-link/skip-navigation-link.njk
+++ b/views/components/skip-navigation-link/skip-navigation-link.njk
@@ -1,5 +1,6 @@
-<p><a href="#main-content">skip to main content</a></p>
+<p>To view the skip link component tab to this example, or click inside this example and press tab.</p>
+<p><a href="#main-content" id="skip-navigation">skip to main content</a></p>
 
-<main id="main-content">
+<main id="main-content tabindex="-1"">
 <h1>Main content</h1>
 </main>
