--- a/views/templates/layout.njk
+++ b/views/templates/layout.njk
@@ -59,7 +59,7 @@
 
 
 
-          <main id="main-content" class="content" role="main">
+          <main id="main-content" tabindex="-1" class="content" role="main">
             {% block content %}
             {% endblock %}
           </main>
