--- a/views/components/anchor-tags/anchor-tags.css
+++ b/views/components/anchor-tags/anchor-tags.css
@@ -9,6 +9,30 @@
     color: inherit;
     text-decoration: none;
   }
+
+  .anchor:hover {
+
+  }
+
+  .anchor:active {
+
+  }
+
+  .anchor:focus {
+
+  }
+
+
+  .anchor:visited {
+    color:hotpink;
+  }
+
+  /* .anchor:visited:after {
+    content 'SEEN';
+    color:hotpink;
+  } */
+
+
   
 
 
