--- a/views/components/skip-navigation-link/skip-navigation-link.css
+++ b/views/components/skip-navigation-link/skip-navigation-link.css
@@ -10,9 +10,10 @@
   
   [href="#main-content"]:focus {
     right: auto;
+    background: var(--colour-bright);
   }
 
-  #main-content [tabindex="-1"] {
+  #main-content[tabindex="-1"] {
     outline: none;
   }
 
