--- a/views/components/tabs/tabs.njk
+++ b/views/components/tabs/tabs.njk
@@ -1,13 +1,14 @@
-<div class="js-tabs-demo tabs">
+
+{# <div class="js-tabs-demo tabs">
   <ul class="tab-list">
     <li class="tab-item" data-tab-active>
-      <a class="tab-link" href="#tab-1" data-tab-active aria-selected="true">HTML</a>
+      <a class="tab-link" href="#tab-1" data-tab-active aria-selected="true">Tab 1</a>
     </li>
     <li class="tab-item">
-      <a class="tab-link" href="#tab-2">CSS</a>
+      <a class="tab-link" href="#tab-2">Tab 2</a>
     </li>
     <li class="tab-item">
-      <a class="tab-link" href="#tab-3">JavaScript</a>
+      <a class="tab-link" href="#tab-3">Tab 3</a>
     </li>
   </ul>
   <div id="tab-1" class="tab-panel">
@@ -19,19 +20,18 @@
   <div id="tab-3" class="tab-panel">
     <h3>Tab three</h3>
   </div>
-</div>
-
+</div> #}
 
 <div class="js-tabs-demo tabs">
   <ul class="tab-list">
     <li class="tab-item" data-tab-active>
-      <a class="tab-link" href="#tab-1" data-tab-active aria-selected="true">HTML</a>
+      <a class="tab-link" href="#tab-1" data-tab-active aria-selected="true">Tab 1</a>
     </li>
     <li class="tab-item">
-      <a class="tab-link" href="#tab-2">Really long tab title example</a>
+      <a class="tab-link" href="#tab-2">Long tab title</a>
     </li>
     <li class="tab-item">
-      <a class="tab-link" href="#tab-3">JavaScript</a>
+      <a class="tab-link" href="#tab-3">Tab 3</a>
     </li>
   </ul>
   <div id="tab-1" class="tab-panel">
@@ -43,24 +43,25 @@
   <div id="tab-3" class="tab-panel">
     <h3>Tab three</h3>
   </div>
-</div>
+</div> 
 
-<div class="js-tabs-demo tabs">
+
+<div class="js-tabs-demo--five tabs">
   <ul class="tab-list">
     <li class="tab-item" data-tab-active>
-      <a class="tab-link" href="#tab-1" data-tab-active aria-selected="true">HTML</a>
+      <a class="tab-link" href="#tab-1" data-tab-active aria-selected="true">Tab 1</a>
     </li>
     <li class="tab-item">
-      <a class="tab-link" href="#tab-2">CSS</a>
+      <a class="tab-link" href="#tab-2">Tab 2</a>
     </li>
     <li class="tab-item">
-      <a class="tab-link" href="#tab-3">JavaScript</a>
+      <a class="tab-link" href="#tab-3">Tab 3</a>
     </li>
         <li class="tab-item">
-      <a class="tab-link" href="#tab-4">JavaScript</a>
+      <a class="tab-link" href="#tab-4">Tab 4</a>
     </li>
     <li class="tab-item">
-      <a class="tab-link" href="#tab-5">JavaScript</a>
+      <a class="tab-link" href="#tab-5">Tab 5</a>
     </li>
   </ul>
   <div id="tab-1" class="tab-panel">
