--- a/views/components/description-lists/description-lists.njk
+++ b/views/components/description-lists/description-lists.njk
@@ -3,22 +3,24 @@
 
 <h4>Front end development languages</h4>
 <dl class="description-list">
-  <dt class="description-list__title">CSS:</dt>
+  <dt class="description-list__title">CSS</dt>
   <dd class="description-list__description">Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.</dd>
-  <dt class="description-list__title">HTML:</dt>
+  <dt class="description-list__title">HTML</dt>
   <dd class="description-list__description">Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications. </dd>
-  <dt class="description-list__title">JavaScript:</dt>
+  <dt class="description-list__title">JavaScript</dt>
   <dd class="description-list__description">JavaScript enables interactive web pages and thus is an essential part of web applications.</dd>
 </dl>
 
 
 <h4>User details</h4>
 <dl class="description-list">
-  <dt class="description-list__title">Name:</dt> 
+  <dt class="description-list__title">Name</dt> 
   <dd class="description-list__description">Cathy Dutton</dd>
-  <dt class="description-list__title">Job role:</dt> 
-  <dd class="description-list__description">Designer</dd>
-  <dt class="description-list__title">Transport:</dt> 
+  <dt class="description-list__title">Interests</dt> 
+  <dd class="description-list__description">Design</dd>
+  <dd class="description-list__description">Travel</dd>
+  <dd class="description-list__description">Football</dd>
+  <dt class="description-list__title">Transport</dt> 
   <dd class="description-list__description">Car</dd> 
   <dd class="description-list__description">Train</dd> 
 </dl>
@@ -27,11 +29,11 @@
 <dl class="description-list">
   <dt class="description-list__title">Sass</dt>
   <dt class="description-list__title">Less</dt>
-  <dt class="description-list__title">Stylus:</dt>
+  <dt class="description-list__title">Stylus</dt>
   <dd class="description-list__description">CSS Processors that extend CSS with variables, operators, interpolations, functions, mixins and many more other usable assets.</dd>
   <dt class="description-list__title">Mustache</dt>
   <dt class="description-list__title">Handlebars</dt>
-  <dt class="description-list__title">Nunjucks:</dt>
+  <dt class="description-list__title">Nunjucks</dt>
   <dd class="description-list__description">JavaScrip templating engines help separate HTML structure from the content contained within. </dd>
 </dl>
 
